# axum-demo

./: .gitignore  Cargo.toml  README.md
examples/anyhow-error-response/: Cargo.toml
examples/anyhow-error-response/src/: main.rs
examples/async-graphql/starwars/: Cargo.toml
examples/async-graphql/starwars/models/: Cargo.toml
examples/async-graphql/starwars/models/src/: lib.rs  model.rs
examples/async-graphql/starwars/src/: main.rs
examples/auto-reload/: Cargo.toml
examples/auto-reload/src/: main.rs
examples/chat/: Cargo.toml  chat.html
examples/chat/src/: main.rs
examples/consume-body-in-extractor-or-middleware/: Cargo.toml
examples/consume-body-in-extractor-or-middleware/src/: main.rs
examples/cors/: Cargo.toml
examples/cors/src/: main.rs
examples/customize-extractor-error/: Cargo.toml
examples/customize-extractor-error/src/: custom_extractor.rs  derive_from_request.rs  main.rs  with_rejection.rs
examples/customize-path-rejection/: Cargo.toml
examples/customize-path-rejection/src/: main.rs
examples/dependency-injection/: Cargo.toml
examples/dependency-injection/src/: main.rs
examples/diesel-async-postgres/: Cargo.toml
examples/diesel-async-postgres/src/: main.rs
examples/diesel-postgres/: Cargo.toml
examples/diesel-postgres/migrations/add_users/: down.sql  up.sql
examples/diesel-postgres/src/: main.rs
examples/error-handling/: Cargo.toml
examples/error-handling/src/: main.rs
examples/form/: Cargo.toml
examples/form/src/: main.rs
examples/global-404-handler/: Cargo.toml
examples/global-404-handler/src/: main.rs
examples/graceful-shutdown/: Cargo.toml
examples/graceful-shutdown/src/: main.rs
examples/handle-head-request/: Cargo.toml
examples/handle-head-request/src/: main.rs
examples/hello-world/: Cargo.toml
examples/hello-world/src/: main.rs
examples/http-proxy/: Cargo.toml
examples/http-proxy/src/: main.rs
examples/jwt/: Cargo.toml
examples/jwt/src/: main.rs
examples/key-value-store/: Cargo.toml
examples/key-value-store/src/: main.rs
examples/listen-multiple-addrs/: Cargo.toml
examples/listen-multiple-addrs/src/: main.rs
examples/low-level-openssl/: Cargo.toml
examples/low-level-openssl/src/: main.rs
examples/low-level-rustls/: Cargo.toml
examples/low-level-rustls/src/: main.rs
examples/multipart-form/: Cargo.toml
examples/multipart-form/src/: main.rs
examples/oauth/: Cargo.toml
examples/oauth/src/: main.rs
examples/parse-body-based-on-content-type/: Cargo.toml
examples/parse-body-based-on-content-type/src/: main.rs
examples/print-request-response/: Cargo.toml
examples/print-request-response/src/: main.rs
examples/prometheus-metrics/: Cargo.toml
examples/prometheus-metrics/src/: main.rs
examples/query-params-with-empty-strings/: Cargo.toml
examples/query-params-with-empty-strings/src/: main.rs
examples/readme/: Cargo.toml
examples/readme/src/: main.rs
examples/reqwest-response/: Cargo.toml
examples/reqwest-response/src/: main.rs
examples/reverse-proxy/: Cargo.toml
examples/reverse-proxy/src/: main.rs
examples/routes-and-handlers-close-together/: Cargo.toml
examples/routes-and-handlers-close-together/src/: main.rs
examples/serve-with-hyper/: Cargo.toml
examples/serve-with-hyper/src/: main.rs
examples/simple-router-wasm/: Cargo.toml
examples/simple-router-wasm/src/: main.rs
examples/sqlx-postgres/: Cargo.toml
examples/sqlx-postgres/src/: main.rs
examples/sse/: Cargo.toml
examples/sse/assets/: script.js
examples/sse/src/: main.rs
examples/static-file-server/: Cargo.toml
examples/static-file-server/src/: main.rs
examples/stream-to-file/: Cargo.toml
examples/stream-to-file/src/: main.rs
examples/templates/: Cargo.toml
examples/templates-minjinja/: Cargo.toml
examples/templates-minjinja/src/: main.rs
examples/templates/src/: main.rs
examples/testing/: Cargo.toml
examples/testing-websockets/: Cargo.toml
examples/testing-websockets/src/: main.rs
examples/testing/src/: main.rs
examples/tls-graceful-shutdown/: Cargo.toml
examples/tls-graceful-shutdown/src/: main.rs
examples/tls-rustls/: Cargo.toml
examples/tls-rustls/src/: main.rs
examples/todos/: Cargo.toml
examples/todos/src/: main.rs
examples/tokio-postgres/: Cargo.toml
examples/tokio-postgres/src/: main.rs
examples/tokio-redis/: Cargo.toml
examples/tokio-redis/src/: main.rs
examples/tracing-aka-logging/: Cargo.toml
examples/tracing-aka-logging/src/: main.rs
examples/unix-domain-socket/: Cargo.toml
examples/unix-domain-socket/src/: main.rs
examples/validator/: Cargo.toml
examples/validator/src/: main.rs
examples/versioning/: Cargo.toml
examples/versioning/src/: main.rs
examples/websockets/: Cargo.toml
examples/websockets/src/: client.rs  main.rs
src/: main.rs
