[package]
name = "low-level-openssl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.h

[dependencies]
axum = "0.7.5"
futures-util = {version = "0.3.30",default-features = false,features = ["alloc"]}
hyper = {version = "1.3.1",features = ["full"]}
hyper-util = {version = "0.1.5"}
openssl = "0.10.64"
tokio = {version = "1.38.0",features = ["full"]}
tokio-openssl = "0.6.4"
tower = {version = "0.4.13",features = ["make"]}
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18",features = ["env-filter"]}
