[package]
name = "print-request-response"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
http-body-util = "0.1.2"
hyper = { version = "1.3.1", features = ["full"] }
tokio = { version = "1.38.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util", "filter"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
