[package]
name = "reverse-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
hyper = { version = "1.3.1", features = ["full"] }
hyper-util = { version = "0.1.5", features = ["client-legacy"] }
tokio = { version = "1.38.0", features = ["full"] }