[package]
name = "serve-with-hyper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
hyper = { version = "1.3.1", features = [] }
hyper-util = { version = "0.1.5", features = ["tokio", "server-auto", "http1"] }
tokio = { version = "1.38.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }