[package]
name = "simple-router-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", default-features = false }
axum-extra = { version = "0.9.3", default-features = false }
futures-executor = "0.3.30"
http = "1.1.0"
tower-service = "0.3.2"
tokio = "1.38.0"