[package]
name = "starwars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "7.0.5"
async-graphql-axum = "7.0.5"
tokio = { version = "1.38.0", features = ["full"] }
axum = "0.7.5"
models = { path = "../starwars/models" }
